/* --- CgiProcess.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef CGIPROCESS_H
#define CGIPROCESS_H

class CgiProcess {
public:
    CgiProcess();
    ~CgiProcess();

private:

};

#endif // CGIPROCESS_H
