/* --- PathUtil.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef PATHUTIL_H
#define PATHUTIL_H

class PathUtil {
public:
    PathUtil();
    ~PathUtil();

private:

};

#endif // PATHUTIL_H
